deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-api
  namespace: clients-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clients-api
  template:
    metadata:
      labels:
        app: clients-api
    spec:
      containers:
        - name: clients-api
          image: node:18-alpine   
          command: ["sleep", "3600"]  
          ports:
            - containerPort: 3000
