clients-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: clients-api
  namespace: clients-api
spec:
  selector:
    app: clients-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
