clients-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-api
  namespace: clients-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clients-api
  template:
    metadata:
      labels:
        app: clients-api
    spec:
      containers:
        - name: clients-api
          image: publicrepo/clients-api:latest # Replace with your public image if needed
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: clients-api
  namespace: clients-api
spec:
  type: ClusterIP
  selector:
    app: clients-api
  ports:
    - port: 80
      targetPort: 3000
