mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: clients-api
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: clients-api
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
